// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductViewContext should apply a hook factory for retrieving api queries: query factory 1`] = `
{
  "lorem": "ipsum",
}
`;

exports[`ProductViewContext should apply a hook for retrieving product context: product context, basic 1`] = `
{
  "dolor": {
    "dolor": "sit",
  },
  "initialGraphFilters": [],
  "initialInventoryFilters": [],
  "initialSubscriptionsInventoryFilters": [],
  "lorem": {
    "lorem": "ipsum",
  },
  "productId": "lorem",
  "viewId": "viewIpsum",
}
`;

exports[`ProductViewContext should apply a hook for retrieving product context: product context, uom filtering cores 1`] = `
{
  "graphTallyQuery": {
    "granularity": "Daily",
  },
  "initialGraphFilters": [
    {
      "color": "#06c",
      "fill": "#8bc1f7",
      "isOptional": true,
      "metric": "Cores",
      "stroke": "#06c",
    },
    {
      "chartType": "threshold",
      "isOptional": true,
      "metric": "Cores",
    },
  ],
  "initialGraphSettings": {
    "isCardTitleDescription": true,
  },
  "initialGuestsFilters": [
    {
      "cell": [Function],
      "header": [Function],
      "id": "displayName",
    },
    {
      "cellWidth": 40,
      "id": "inventoryId",
    },
    {
      "cell": [Function],
      "cellWidth": 15,
      "id": "lastSeen",
    },
  ],
  "initialInventoryFilters": [
    {
      "cell": [Function],
      "id": "display_name",
      "isSortable": true,
    },
    {
      "cellWidth": 15,
      "id": "cores",
      "isOptional": true,
      "isSortable": true,
      "isWrappable": true,
    },
    {
      "cell": [Function],
      "cellWidth": 20,
      "id": "last_seen",
      "isSortable": true,
      "isWrappable": true,
    },
  ],
  "initialInventorySettings": {},
  "initialOption": "cores",
  "initialSecondaryToolbarFilters": [
    {
      "id": "uom",
    },
    {
      "id": "granularity",
    },
  ],
  "initialSubscriptionsInventoryFilters": [
    {
      "id": "product_name",
      "isSortable": true,
      "isWrappable": true,
    },
    {
      "cellWidth": 15,
      "id": "service_level",
      "isSortable": true,
      "isWrappable": true,
    },
    {
      "cellWidth": 20,
      "id": "quantity",
      "isSortable": true,
      "isWrappable": true,
    },
    {
      "cell": [Function],
      "cellWidth": 15,
      "header": [Function],
      "id": "total_capacity",
      "isSortable": true,
      "isWrappable": true,
    },
    {
      "cell": [Function],
      "cellWidth": 15,
      "id": "next_event_date",
      "isSortable": true,
      "isWrappable": true,
    },
  ],
  "initialToolbarFilters": [
    {
      "id": "sla",
    },
  ],
  "inventoryHostsQuery": {
    "dir": "desc",
    "limit": 100,
    "offset": 0,
    "sort": "last_seen",
  },
  "inventorySubscriptionsQuery": {
    "dir": "desc",
    "limit": 100,
    "offset": 0,
    "sort": "next_event_date",
  },
  "productDisplay": "partial",
  "productGroup": "OpenShift Container Platform",
  "productId": "OpenShift Container Platform",
  "productLabel": "OpenShift Container Platform",
  "query": {
    "beginning": "2019-06-20T00:00:00.000Z",
    "ending": "2019-07-20T23:59:59.999Z",
    "uom": "cores",
  },
  "viewId": "viewOpenShift Container Platform",
}
`;

exports[`ProductViewContext should apply a hook for retrieving product context: product context, uom filtering sockets 1`] = `
{
  "graphTallyQuery": {
    "granularity": "Daily",
  },
  "initialGraphFilters": [
    {
      "color": "#06c",
      "fill": "#8bc1f7",
      "isOptional": true,
      "metric": "Sockets",
      "stroke": "#06c",
    },
    {
      "chartType": "threshold",
      "isOptional": true,
      "metric": "Sockets",
    },
  ],
  "initialGraphSettings": {
    "isCardTitleDescription": true,
  },
  "initialGuestsFilters": [
    {
      "cell": [Function],
      "header": [Function],
      "id": "displayName",
    },
    {
      "cellWidth": 40,
      "id": "inventoryId",
    },
    {
      "cell": [Function],
      "cellWidth": 15,
      "id": "lastSeen",
    },
  ],
  "initialInventoryFilters": [
    {
      "cell": [Function],
      "id": "display_name",
      "isSortable": true,
    },
    {
      "cellWidth": 15,
      "id": "sockets",
      "isOptional": true,
      "isSortable": true,
      "isWrappable": true,
    },
    {
      "cell": [Function],
      "cellWidth": 20,
      "id": "last_seen",
      "isSortable": true,
      "isWrappable": true,
    },
  ],
  "initialInventorySettings": {},
  "initialOption": "cores",
  "initialSecondaryToolbarFilters": [
    {
      "id": "uom",
    },
    {
      "id": "granularity",
    },
  ],
  "initialSubscriptionsInventoryFilters": [
    {
      "id": "product_name",
      "isSortable": true,
      "isWrappable": true,
    },
    {
      "cellWidth": 15,
      "id": "service_level",
      "isSortable": true,
      "isWrappable": true,
    },
    {
      "cellWidth": 20,
      "id": "quantity",
      "isSortable": true,
      "isWrappable": true,
    },
    {
      "cell": [Function],
      "cellWidth": 15,
      "header": [Function],
      "id": "total_capacity",
      "isSortable": true,
      "isWrappable": true,
    },
    {
      "cell": [Function],
      "cellWidth": 15,
      "id": "next_event_date",
      "isSortable": true,
      "isWrappable": true,
    },
  ],
  "initialToolbarFilters": [
    {
      "id": "sla",
    },
  ],
  "inventoryHostsQuery": {
    "dir": "desc",
    "limit": 100,
    "offset": 0,
    "sort": "last_seen",
  },
  "inventorySubscriptionsQuery": {
    "dir": "desc",
    "limit": 100,
    "offset": 0,
    "sort": "next_event_date",
  },
  "productDisplay": "partial",
  "productGroup": "OpenShift Container Platform",
  "productId": "OpenShift Container Platform",
  "productLabel": "OpenShift Container Platform",
  "query": {
    "beginning": "2019-06-20T00:00:00.000Z",
    "ending": "2019-07-20T23:59:59.999Z",
    "uom": "cores",
  },
  "viewId": "viewOpenShift Container Platform",
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific api queries: graphTallyQuery 1`] = `
{
  "granularity": "testGranularity",
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific api queries: inventoryGuestsQuery 1`] = `
{
  "limit": 100,
  "offset": "testOffset",
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific api queries: inventoryHostsQuery 1`] = `
{
  "limit": "testLimit",
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific api queries: inventorySubscriptionsQuery 1`] = `
{
  "sla": "testSla",
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific api queries: query 1`] = `
{
  "lorem": "ipsum",
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific config filters and settings: productConfig 1`] = `
{
  "productGroup": "loremIpsum",
  "productId": "lorem",
  "productLabel": "labelLorem",
  "viewId": "viewIpsum",
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific config filters and settings: productGraphConfig 1`] = `
{
  "filters": [
    {
      "lorem": "ipsum",
    },
  ],
  "settings": {
    "lorem": "ipsum",
  },
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific config filters and settings: productInventoryGuestsConfig 1`] = `
{
  "filters": [
    {
      "sit": "dolor",
    },
  ],
  "initialQuery": {},
  "settings": {
    "sit": "dolor",
  },
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific config filters and settings: productInventoryHostsConfig 1`] = `
{
  "filters": [
    {
      "dolor": "sit",
    },
  ],
  "settings": {
    "dolor": "sit",
  },
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific config filters and settings: productInventorySubscriptionsConfig 1`] = `
{
  "filters": [
    {
      "sit": "amet",
    },
  ],
  "settings": {
    "sit": "amet",
  },
}
`;

exports[`ProductViewContext should apply hooks for retrieving specific config filters and settings: productToolbarConfig 1`] = `
{
  "filters": [
    {
      "ipsum": "dolor",
    },
  ],
  "secondaryFilters": [
    {
      "hello": "world",
    },
  ],
  "settings": {
    "ipsum": "dolor",
  },
}
`;

exports[`ProductViewContext should return specific properties: specific properties 1`] = `
{
  "DEFAULT_CONTEXT": [
    {},
    [Function],
  ],
  "ProductViewContext": {
    "$$typeof": Symbol(react.context),
    "Consumer": {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": [Circular],
    },
    "Provider": {
      "$$typeof": Symbol(react.provider),
      "_context": [Circular],
    },
    "_calculateChangedBits": null,
    "_currentRenderer": null,
    "_currentRenderer2": null,
    "_currentValue": [
      {},
      [Function],
    ],
    "_currentValue2": [
      {},
      [Function],
    ],
    "_threadCount": 0,
  },
  "useGraphConfig": [Function],
  "useGraphTallyQuery": [Function],
  "useInventoryGuestsConfig": [Function],
  "useInventoryGuestsQuery": [Function],
  "useInventoryHostsConfig": [Function],
  "useInventoryHostsQuery": [Function],
  "useInventorySubscriptionsConfig": [Function],
  "useInventorySubscriptionsQuery": [Function],
  "useProduct": [Function],
  "useProductContext": [Function],
  "useQuery": [Function],
  "useQueryFactory": [Function],
  "useToolbarConfig": [Function],
}
`;
